gat: update to 0.16.0

--- a/textproc/gat/Portfile
+++ b/textproc/gat/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/koki-develop/gat 0.15.1 v
+go.setup            github.com/koki-develop/gat 0.16.0 v
 github.tarball_from archive
 revision            0
 
@@ -25,9 +25,9 @@ destroot {
 }
 
 checksums           ${distname}${extract.suffix} \
-                        rmd160  bd551f061511a82e8bc5de1957d9a90add1643df \
-                        sha256  24f6775b08bb7bab9d1995fd9dce918d005586c6c42c0323d5bb2c87b3c24f93 \
-                        size    13961470
+                        rmd160  dcabca12776b3e614aeba535dc1643dfeaa4c331 \
+                        sha256  482bbeda7fd524a23cb8ed553b7227feee729bc8ee5da3c0084ab7119744fa34 \
+                        size    13962122
 
 go.vendors          gopkg.in/yaml.v3 \
                         lock    v3.0.1 \
@@ -54,6 +54,11 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  9fad54bb4c2f96a60e6d5126ff16ffa4064b1844 \
                         sha256  8e2ecc9dc226234900b728b1b340e096675a27b3724298ce964d21a276f5bc05 \
                         size    1244466 \
+                    golang.org/x/image \
+                        lock    v0.15.0 \
+                        rmd160  1dec7c2fcaa4ae3e64febdb34ea67d5f01085d90 \
+                        sha256  bd8543f43e804876afd58a9825cdc825a88902ab7aa34e66f8658d685223e872 \
+                        size    5093264 \
                     github.com/yuin/goldmark-emoji \
                         lock    v1.0.1 \
                         rmd160  cab0d684c2b256bb819e9a559a66767e3cbbf470 \
@@ -70,10 +75,10 @@ go.vendors          gopkg.in/yaml.v3 \
                         sha256  85f0d6fc41b5098c47225e066ab461c8579858c16969a2fd2deaa24c47fcd7e0 \
                         size    8961 \
                     github.com/tdewolff/test \
-                        lock    f1265d231d52 \
-                        rmd160  265965bf9037a4689b53a3df4db9b5896482865a \
-                        sha256  0ad9a03ca3b22e5a79d802642d4fb54fa3a0017ca729783a03cee07f4180ccde \
-                        size    3263 \
+                        lock    7de5f7df4739 \
+                        rmd160  4cbe095642b04e477eeddbe435c4083190baafc0 \
+                        sha256  71b183acdc8ac70986afd458b90bb9a612ff5de385713675ee1e826fa313a1ac \
+                        size    3427 \
                     github.com/tdewolff/parse \
                         lock    v2.7.7 \
                         rmd160  aa653f732ac8a0f9a139ac3bc9dceda9dde0cee3 \
@@ -104,6 +109,11 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  abb6efdf4628dc31e4a4b62f9dd8599da2c121b1 \
                         sha256  7dcbfc07c6edc7cef7d62d13649a5e6d8bc740d85bbe5a2b3a13f6cbc1c6f42c \
                         size    11253 \
+                    github.com/sabhiram/go-gitignore \
+                        lock    525f6e181f06 \
+                        rmd160  dedbb7e6dcd1cf8dd5f625090fa8c6b4af8430d6 \
+                        sha256  1966d81c0496a29d36e15731d3290bbc71be1b8ca3745a58b364d8a18972b153 \
+                        size    8886 \
                     github.com/rivo/uniseg \
                         lock    v0.2.0 \
                         rmd160  33577def583aa2db50b69ca601e5d29ab201ebc4 \
@@ -175,10 +185,10 @@ go.vendors          gopkg.in/yaml.v3 \
                         sha256  665368712e603d7cdd3e4648eef0ed051237f7284c55f6f571c7ee766d6d20de \
                         size    6447 \
                     github.com/google/yamlfmt \
-                        lock    v0.10.0 \
-                        rmd160  07e56ae70e8852243bdb2285c03c78057f7cc099 \
-                        sha256  40bafc1cf4218e0da6c4c3f82bbe8ac535576b07656fa794fabb74095fc26201 \
-                        size    29787 \
+                        lock    v0.11.0 \
+                        rmd160  5663f303ad673d1be77a130eb8f90f0e1c67bc97 \
+                        sha256  9b14367be001d41f191372d59b74534068fc0c50df729dd697c9acbab5054780 \
+                        size    38327 \
                     github.com/google/go-cmp \
                         lock    v0.5.9 \
                         rmd160  9832ae80123461baed8aa20e830199c0e21e337b \
