hysteria: Fix outdated build command and startup item
* Pass the correct package to the go build invocation
* Fix the --config flag in the startup item

--- a/net/hysteria/Portfile
+++ b/net/hysteria/Portfile
@@ -6,7 +6,7 @@ PortGroup           golang 1.0
 go.setup            github.com/apernet/hysteria 2.2.4 app/v
 set git-commit      80bc3b3a443268d9c89b0f82071ec7f38006a1ba
 # This line is for displaying commit in CLI only
-revision            0
+revision            1
 categories          net
 maintainers         {i0ntempest @i0ntempest} openmaintainer
 license             MIT
@@ -14,7 +14,7 @@ license             MIT
 description         network utility and proxy optimized for networks of poor quality
 long_description    Hysteria is a feature-packed network utility optimized for networks of poor quality \
                     (e.g. satellite connections, congested public Wi-Fi, cross-country connection) \
-                    powered by a custom version of QUIC protocol. 
+                    powered by a custom version of QUIC protocol.
 
 checksums           rmd160  ea8f0a7ee596a877bf6b8c2d8f1557c6e8697c18 \
                     sha256  b124ef8b152706d86f5f71d451a4a88874015f3f98275b55d8960768d9d4c5a9 \
@@ -24,7 +24,7 @@ checksums           rmd160  ea8f0a7ee596a877bf6b8c2d8f1557c6e8697c18 \
 # Remember to update git commit hash
 
 set time [clock format [clock seconds] -format %Y-%m-%dT%H:%M:%S]
-build.args-append   -ldflags=\"-X 'main.appVersion=v${version}' -X 'main.appCommit=${git-commit}' -X 'main.appDate=${time}'\" -o ../hysteria ./cmd
+build.args-append   -ldflags=\"-X 'main.appVersion=v${version}' -X 'main.appCommit=${git-commit}' -X 'main.appDate=${time}'\" -o ../hysteria .
 # go2port no longer works since 1.3.1 as there's no go.mod at project root
 go.offline_build    no
 build.dir           ${worksrcpath}/app
@@ -48,4 +48,4 @@ notes-append "
 "
 
 startupitem.create          yes
-startupitem.executable      ${prefix}/bin/hysteria -config ${prefix}/etc/hysteria/config.json
+startupitem.executable      ${prefix}/bin/hysteria --config ${prefix}/etc/hysteria/config.json
