--- a/sysutils/lnav/Portfile
+++ b/sysutils/lnav/Portfile
@@ -41,16 +41,16 @@ if {${name} eq ${subport}} {
 
 } else {
     # Devel
-    github.setup        tstack lnav 0.12.0-beta1 v
+    github.setup        tstack lnav 0.12.0 v
     github.tarball_from archive
     revision            0
 
     conflicts           lnav
 
     checksums           ${distname}${extract.suffix} \
-                        rmd160  b0eb0c929a7bb53310737f963addda5ccc072fdf \
-                        sha256  473bb32ca1f32904a9c64eeec8a8f6068ca15e4cafcd9e407c4d210b52fe1a8b \
-                        size    17996478
+                        rmd160  c9869fba8ac907f9c88b55da4d37b5422964bfef \
+                        sha256  d431840213549c8175780ecc6151ae66c3ecf27b48e5e859a6a18df83c4a02bd \
+                        size    18038892
 }
 
 depends_lib-append  path:lib/libssl.dylib:openssl \
