py-platformdirs: remove version restriction for build backend
Closes: https://trac.macports.org/ticket/69389

--- a/python/py-platformdirs/Portfile
+++ b/python/py-platformdirs/Portfile
@@ -42,8 +42,9 @@ if {${name} ne ${subport}} {
         depends_build-append \
                     port:py${python.version}-toml
     } else {
+        patchfiles-append   patch-pyproject.toml.diff
+
         depends_build   port:py${python.version}-hatch-vcs
-        python.pep517   yes
         python.pep517_backend hatch
 
         if {${python.version} < 38} {
