libjxl: update to 0.10.0
Also disable build with install rpath in +tests.

Fixes: https://trac.macports.org/ticket/69053

--- a/graphics/libjxl/Portfile
+++ b/graphics/libjxl/Portfile
@@ -5,7 +5,7 @@ PortGroup           github 1.0
 PortGroup           cmake 1.0
 PortGroup           compiler_blacklist_versions 1.0
 
-github.setup        libjxl libjxl 0.9.2 v
+github.setup        libjxl libjxl 0.10.0 v
 categories          graphics
 maintainers         {jmr @jmroot}
 license             BSD
@@ -22,8 +22,8 @@ master_sites-append sourceforge:project/macports/distfiles/${name}:skcms
 # https://skia.googlesource.com/skcms/+archive/${skcms_commit}.tar.gz?dummy=
 distfiles-append    skcms-${skcms_commit}${extract.suffix}:skcms
 checksums           ${name}-${version}${extract.suffix} \
-                        rmd160 ee1e1e18a68e872f598726dc8deafeed55021349 \
-                        sha256 bf28e411d84c50578ab74107cdd624e099313129883a43907c261e8116a11b3b \
+                        rmd160 d21d8f58b8092714b58fc17f7753482b53e08c60 \
+                        sha256 ab32d52b033c814d24762db4942a3b45315d9db37bf5c8a9741ccc1bb0a52d97 \
                     skcms-${skcms_commit}${extract.suffix} \
                         rmd160 441c5313197732e0756df440be91bd813a994c20 \
                         sha256 1ee4607d6fbcad26759fcbc95a6dcdccf3dfc1e55a5ca748e7853f9fb97b28ee
@@ -32,11 +32,13 @@ depends_build-append \
                     port:asciidoc \
                     port:pkgconfig
 depends_lib         port:brotli \
-                    port:giflib5 \
                     port:highway \
                     path:include/turbojpeg.h:libjpeg-turbo \
                     port:libpng \
                     port:openexr
+
+# currently broken
+# port:giflib5
 
 extract.only        ${name}-${version}${extract.suffix}
 post-extract {
@@ -65,9 +67,10 @@ configure.args-append \
                     -DJPEGXL_ENABLE_SKCMS=YES \
                     -DJPEGXL_FORCE_SYSTEM_BROTLI=YES \
                     -DJPEGXL_FORCE_SYSTEM_HWY=YES \
-                    -DASCIIDOC:FILEPATH=${prefix}/bin/a2x \
-                    -DGIF_INCLUDE_DIR:FILEPATH=${prefix}/include/giflib5 \
-                    -DGIF_LIBRARY:FILEPATH=${prefix}/lib/giflib5/lib/libgif.dylib
+                    -DASCIIDOC:FILEPATH=${prefix}/bin/a2x
+
+#                    -DGIF_INCLUDE_DIR:FILEPATH=${prefix}/include/giflib5 \
+#                    -DGIF_LIBRARY:FILEPATH=${prefix}/lib/giflib5/lib/libgif.dylib
 
 compiler.cxx_standard   2011
 # Compilation warning (from highway headers):
@@ -78,7 +81,9 @@ compiler.blacklist  {clang < 1001}
 variant tests description {Enable building of test code} {
     depends_build-append    port:gtest
     configure.args-replace  -DBUILD_TESTING=NO \
-                            -DBUILD_TESTING=YES
+                            -DBUILD_TESTING=YES \
+                            -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON \
+                            -DCMAKE_BUILD_WITH_INSTALL_RPATH=OFF
     configure.args-append   -DJPEGXL_FORCE_SYSTEM_GTEST=YES
     test.run        yes
 }
