libjxl dependents: rev bump for 0.10.0

--- a/graphics/geeqie/Portfile
+++ b/graphics/geeqie/Portfile
@@ -7,6 +7,7 @@ PortGroup           github 1.0
 PortGroup           meson 1.0
 
 github.setup        BestImageViewer geeqie 2.2 v
+revision            1
 github.tarball_from releases
 checksums           rmd160  f6649522b86410edf019b8d8c4dcd6c813fddfdc \
                     sha256  899ac33b801e0e83380f79e9094bc2615234730ccf6a02d93fd6da3e6f8cfe94 \
@@ -14,7 +15,6 @@ checksums           rmd160  f6649522b86410edf019b8d8c4dcd6c813fddfdc \
 
 categories          graphics x11
 # Check: dependencies may not build on 10.6 and earlier
-platforms           darwin
 maintainers         nomaintainer
 license             GPL-2+
 # only used at build
