dotnet-runtime-7: Fix typo in checksums
Closes: https://trac.macports.org/ticket/69394

--- a/dotnet/dotnet-runtime-7/Portfile
+++ b/dotnet/dotnet-runtime-7/Portfile
@@ -33,7 +33,7 @@ switch ${build_arch} {
         distname            dotnet-runtime-${version}-osx-arm64
         checksums           rmd160  9a697d3a4158cfda04780cb88acaa2ddea69cce9 \
                             sha256  113b162abc015d0dbeb580cd3f187b4f04db3268828f8796c5ca93ec90c0ccda \
-                            size    29180416v
+                            size    29180416
     }
     default {
         known_fail yes
