py-joblib: drop py3{5-7} subports

--- a/python/py-joblib/Portfile
+++ b/python/py-joblib/Portfile
@@ -11,8 +11,7 @@ license             BSD
 platforms           {darwin any}
 supported_archs     noarch
 
-python.versions     35 36 37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -29,23 +28,3 @@ homepage            https://joblib.readthedocs.io/
 checksums           rmd160  f7df69c1fa5cf62ee01c7fa7b7efced00d6bf584 \
                     sha256  92f865e621e17784e7955080b6d042489e3b8e294949cc44c6eac304f59772b1 \
                     size    1987720
-
-if {${name} ne ${subport}} {
-
-    if {${python.version} < 37} {
-        python.pep517       no
-        depends_build-append \
-                            port:py${python.version}-setuptools
-    }
-
-    if {${python.version} <= 35} {
-        version             0.14.1
-        revision            0
-        distname            ${python.rootname}-${version}
-        checksums           rmd160  2229a675e794985fb2396ca5a4c50497da71f605 \
-                            sha256  0630eea4f5664c463f23fbf5dcfc54a2bc6168902719fa8e19daf033022786c8 \
-                            size    299621
-    }
-
-    livecheck.type      none
-}
