py-iminuit: add cmake dependency

--- a/python/py-iminuit/Portfile
+++ b/python/py-iminuit/Portfile
@@ -30,7 +30,8 @@ if {${name} ne ${subport}} {
                     port:py${python.version}-pybind11 \
                     port:py${python.version}-pathspec \
                     port:py${python.version}-pyproject_metadata \
-                    port:ninja
+                    port:ninja \
+                    path:bin/cmake:cmake
 
     depends_lib-append \
                     port:py${python.version}-numpy
