py-iminuit: require thread_local_storage

--- a/python/py-iminuit/Portfile
+++ b/python/py-iminuit/Portfile
@@ -23,6 +23,7 @@ checksums           rmd160  630793607aaaac7403b216af7af86f507f1724e8 \
 python.versions     38 39 310 311 312
 
 compiler.cxx_standard   2014
+compiler.thread_local_storage yes
 
 if {${name} ne ${subport}} {
     depends_build-append \
