go{,-devel}: indicate supported platform versions
Closes: https://trac.macports.org/ticket/69396

--- a/lang/go/Portfile
+++ b/lang/go/Portfile
@@ -15,6 +15,7 @@ epoch               3
 # tested the candidate version using the `go-devel` port, to verify how it
 # builds against current and older versions of macOS.
 
+if {$subport eq $name} {
 # Go 1.22 does not build on macOS 10.12 and older.
 # 1.14.x is the last branch to support i386 on macOS.
 # However past 1.11.x everything is broken.
@@ -37,12 +38,15 @@ if {${os.platform} eq "darwin" && ${os.major} < 17} {
     set unsupported_macos_386 false
     revision        0
 }
+platforms           {darwin >= 10} freebsd linux
+}
 
 # Subport for Go Unstable Version
 subport ${name}-devel {
     version         1.22.0
     revision        0
     epoch           1
+    platforms       {darwin >= 17} freebsd linux
 }
 
 if {${os.platform} eq "darwin" \
@@ -55,7 +59,6 @@ if {${os.platform} eq "darwin" \
 homepage            https://go.dev
 
 categories          lang
-platforms           darwin freebsd linux
 license             BSD
 description         compiled, garbage-collected, concurrent programming \
                     language developed by Google Inc.
@@ -343,13 +346,5 @@ destroot {
 
     if { [ file exists ${worksrcpath}/go.env ] } {
         copy ${worksrcpath}/go.env ${grfdir}/
-    }
-}
-
-if {${os.platform} eq "darwin" && ${os.major} < 10} {
-    known_fail yes
-    pre-fetch {
-        ui_error "${subport} @${version} requires Mac OS X 10.6 or greater."
-        return -code error "incompatible Mac OS X version"
     }
 }
