py38-ipython: fix checksums
Closes: https://trac.macports.org/ticket/69397

--- a/python/py-ipython/Portfile
+++ b/python/py-ipython/Portfile
@@ -43,10 +43,10 @@ if {${name} ne ${subport}} {
     if {${python.version} eq 38} {
         version             8.12.3
         revision            0
-        distname            ${python.rootname}-${version}
-        checksums           rmd160  daa3d063bff985b885c55c8e9847d22524f7def6 \
-                            sha256  c7b80eb7f5a855a88efc971fda506ff7a91c280b42cdae26643e0f601ea281ea \
-                            size    5466964
+        checksums           md5 6b59c900f339e11f25c0c8760cc7c4bb \
+                            rmd160 a9dd82f36c87db67405a8956c0efeb022ce734a3 \
+                            sha256 3910c4b54543c2ad73d06579aa771041b7d5707b033bd488669b4cf544e3b363 \
+                            size   5470171
         depends_lib-append  port:py${python.version}-appnope \
                             port:py${python.version}-backcall \
                             port:py${python.version}-pickleshare \
@@ -54,7 +54,6 @@ if {${name} ne ${subport}} {
     } elseif {${python.version} eq 39} {
         version             8.18.1
         revision            0
-        distname            ${python.rootname}-${version}
         checksums           rmd160  115537ce4b2b7bbb4ea2bc391f4875cf437c3856 \
                             sha256  ca6f079bb33457c66e233e4580ebfc4128855b4cf6370dddd73842a9563e8a27 \
                             size    5486330
