--- a/python/py-libxml2/Portfile
+++ b/python/py-libxml2/Portfile
@@ -27,7 +27,7 @@ distname            libxml2-${version}
 dist_subdir         libxml2
 use_xz yes
 
-python.versions     27 37 38 39 310 311 312
+python.versions     27 38 39 310 311 312
 
 if {${name} ne ${subport}} {
 
