air: update to 1.51.0

--- a/devel/air/Portfile
+++ b/devel/air/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/cosmtrek/air 1.50.0 v
+go.setup            github.com/cosmtrek/air 1.51.0 v
 github.tarball_from archive
 revision            0
 
@@ -18,9 +18,9 @@ license             GPL-3
 maintainers         {gmail.com:herby.gillot @herbygillot} \
                     openmaintainer
 
-checksums           rmd160  37c3c57fe0beae8e05dcd28bd0af4a020e96f0c3 \
-                    sha256  4ca2455ef73c40feb4ce95eb62408b3f1bc91342251e05c9c06cfa5914714d5f \
-                    size    1037815
+checksums           rmd160  9bbd40afd2d2d24a43ae51eb4bd6470401cfc70c \
+                    sha256  a7469dc6774575b502de95b8c203a40bc1b7fdacfe1f9d112ccbc57af0e7d05e \
+                    size    741113
 
 patch {
     # Set the build version directly in the Makefile. Do not attempt to
