Vidalia: add miniupnpc variant, revbump

--- a/security/Vidalia/Portfile
+++ b/security/Vidalia/Portfile
@@ -6,6 +6,7 @@ PortGroup           qt4 1.0
 
 name                Vidalia
 version             0.2.21
+revision            1
 categories          security net aqua
 maintainers         nomaintainer
 description         Vidalia is a controller GUI for the Tor software
@@ -27,11 +28,23 @@ depends_lib-append  port:tor
 
 patchfiles          patch-TorSettings.h.diff
 
-configure.args      ${qt_cmake_defines}
+configure.args-append \
+                    ${qt_cmake_defines} \
+                    -DUSE_MINIUPNPC=OFF
 
 destroot {
     file copy ${worksrcpath}/src/vidalia/Vidalia.app ${destroot}${applications_dir}/Vidalia.app
 }
+
+variant miniupnpc description "Enable miniupnpc support" {
+    depends_lib-append \
+                    port:miniupnpc
+    configure.args-replace \
+                    -DUSE_MINIUPNPC=OFF -DUSE_MINIUPNPC=ON
+}
+
+default_variants-append \
+                    +miniupnpc
 
 livecheck.type      regexm
 livecheck.url       ${homepage}
