--- a/security/Vidalia/Portfile
+++ b/security/Vidalia/Portfile
@@ -2,11 +2,8 @@
 
 PortSystem          1.0
 PortGroup           cmake 1.0
-PortGroup           qt4 1.0
 
 name                Vidalia
-version             0.2.21
-revision            1
 categories          security net aqua
 maintainers         nomaintainer
 description         Vidalia is a controller GUI for the Tor software
@@ -16,20 +13,53 @@ long_description    Vidalia is a cross-platform controller GUI for the Tor softw
 
 license             {GPL-2+ OpenSSLException}
 homepage            https://www.torproject.org/projects/vidalia.html.en
-master_sites        https://www.torproject.org/dist/vidalia/ \
-                    https://archive.torproject.org/tor-package-archive/vidalia/
-distname            vidalia-${version}
 
-checksums           rmd160  a1086c98216fed09472d494c95033097ec57b43c \
+if {${os.arch} eq "arm"} {
+    PortGroup       github 1.0
+    PortGroup       qt5 1.0
+
+    qt5.depends_component   qtscript qttools
+    # No support for Qt5 in releases. Qt4 is broken on aarch64.
+    github.setup    a-ilin vidalia 8240540188062a168a66b25ca61b852cc89140ad
+    version         0.3.3-alpha
+    revision        0
+    github.tarball_from archive
+    checksums       rmd160  2107d50a7d72fd93ed75e613515ed33af4e191ca \
+                    sha256  e4c2138b43d32d9cd23282378074f94bc38065e2dc79da05a3f7fbfb61ecb2a0 \
+                    size    6116757
+
+    # https://github.com/a-ilin/vidalia/pull/3
+    patchfiles-append \
+                    0001-Vidalia.cpp-fix-linking.patch \
+                    0002-LogFilter.cpp-fix-includes.patch
+
+    configure.args-append \
+                    -DUSE_QT5=ON
+} else {
+    PortGroup       qt4 1.0
+
+    version         0.2.21
+    revision        1
+    master_sites    https://www.torproject.org/dist/vidalia/ \
+                    https://archive.torproject.org/tor-package-archive/vidalia/
+    distname        vidalia-${version}
+    checksums       rmd160  a1086c98216fed09472d494c95033097ec57b43c \
                     sha256  c4008e7e7781dddf4a8670a435da6496dc9309dbdbc6125ac6d2cc871bdc1be7 \
                     size    6360390
 
+    patchfiles      patch-TorSettings.h.diff
+
+    configure.args-append \
+                    ${qt_cmake_defines}
+
+    livecheck.type  regexm
+    livecheck.url   ${homepage}
+    livecheck.regex The most recent stable release is: (\[\\d\.\]+)
+}
+
 depends_lib-append  port:tor
 
-patchfiles          patch-TorSettings.h.diff
-
 configure.args-append \
-                    ${qt_cmake_defines} \
                     -DUSE_MINIUPNPC=OFF
 
 destroot {
@@ -45,7 +75,3 @@ variant miniupnpc description "Enable miniupnpc support" {
 
 default_variants-append \
                     +miniupnpc
-
-livecheck.type      regexm
-livecheck.url       ${homepage}
-livecheck.regex     The most recent stable release is: (\[\\d\.\]+)
