Vidalia: non-functional: minor changes to portfile, claim maintainership

--- a/security/Vidalia/Portfile
+++ b/security/Vidalia/Portfile
@@ -5,11 +5,11 @@ PortGroup           cmake 1.0
 
 name                Vidalia
 categories          security net aqua
-maintainers         nomaintainer
-description         Vidalia is a controller GUI for the Tor software
-long_description    Vidalia is a cross-platform controller GUI for the Tor software, \
+maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
+description         ${name} is a controller GUI for the Tor software
+long_description    ${name} is a cross-platform controller GUI for the Tor software, \
                     built using the Qt framework. Vidalia runs on most platforms \
-                    supported by Qt 4.2 or later
+                    supported by Qt 4.2 or later.
 
 license             {GPL-2+ OpenSSLException}
 homepage            https://www.torproject.org/projects/vidalia.html.en
