Vidalia: support testing

--- a/security/Vidalia/Portfile
+++ b/security/Vidalia/Portfile
@@ -75,3 +75,23 @@ variant miniupnpc description "Enable miniupnpc support" {
 
 default_variants-append \
                     +miniupnpc
+
+variant tests description "Enable tests" {
+    depends_build-append \
+                    port:libiconv
+    configure.args-append \
+                    -DBUILD_TESTS=ON
+
+    test.run        yes
+
+    test.dir        ${worksrcpath}/src/tests
+    test.cmd        ./VidaliaTestSuite
+    test.target
+
+    # https://github.com/a-ilin/vidalia/issues/4
+    pre-test {
+        ui_warn "At the moment tests run correctly\
+            only under a regular user. You could run\
+            VidaliaTestSuite binary manually."
+    }
+}
