--- a/x11/homebank/Portfile
+++ b/x11/homebank/Portfile
@@ -24,6 +24,10 @@ checksums           rmd160  5b8452b559e5f2d6e84e1089558fa37b918f7076 \
                     sha256  331d7ef88d90f3f34ca6610f7f18e89e935443b18b091a87d9b94bd7556399ef \
                     size    3651101
 
+livecheck.type      regex
+livecheck.url       ${homepage}/ChangeLog
+livecheck.regex     "Made (\\d.\\d.\\d) release"
+
 depends_build       port:intltool \
                     port:pkgconfig
 depends_lib         port:gettext \
