--- a/x11/homebank/Portfile
+++ b/x11/homebank/Portfile
@@ -28,6 +28,10 @@ livecheck.type      regex
 livecheck.url       ${homepage}/ChangeLog
 livecheck.regex     "Made (\\d.\\d.\\d) release"
 
+livecheck.type      regex
+livecheck.url       ${homepage}/ChangeLog
+livecheck.regex     "Made (\\d.\\d.\\d) release"
+
 depends_build       port:intltool \
                     port:pkgconfig
 depends_lib         port:gettext \
