--- a/x11/homebank/Portfile
+++ b/x11/homebank/Portfile
@@ -7,7 +7,7 @@ version             5.7.4
 revision            0
 categories          x11 finance
 license             GPL-2+
-maintainers         {@sibador gmail.com:julien.barbey} openmaintainer
+maintainers         {@jbarbey gmail.com:julien.barbey} openmaintainer
 description         Software to manage personal accounts, light and simple.
 long_description    HomeBank is the free software you have always wanted to \
                     manage your personal accounts at home. The main concept \
@@ -17,12 +17,16 @@ long_description    HomeBank is the free software you have always wanted to \
                     with powerful report tools based on filtering and \
                     graphical charts.
 
-homepage            http://homebank.free.fr/
+homepage            https://www.gethomebank.org/
 master_sites        ${homepage}public/sources/
 
 checksums           rmd160  c6eec6fa0d233e24aade8ae2c087ec29abb0ab00 \
                     sha256  42ce7146c875ea0ca3c93391b6a9bf4714db4621c63f4a094dcc6f8985bb54e4 \
                     size    3670067
+
+livecheck.type      regex
+livecheck.url       ${homepage}/ChangeLog
+livecheck.regex     "Made (\\d.\\d.\\d) release"
 
 depends_build       port:intltool \
                     port:pkgconfig
