re-flex: add variant to address conflict with pre-existing port
Signed-off-by: Thomas E. Dickey <dickey@invisible-island.net>

--- a/devel/re-flex/Portfile
+++ b/devel/re-flex/Portfile
@@ -26,8 +26,10 @@ long_description    RE/flex is a regex-centric, fast lexical analyzer generator 
 
 homepage            https://www.genivia.com/doc/reflex/html/
 
-# identical executable name
-conflicts           reflex
+# rename to avoid conflict identical executable name
+variant noconflict description {install as "re-flex" to address conflict} {
+    configure.args-append --program-transform-name=s,reflex,re-flex,g
+}
 
 compiler.cxx_standard 2011
 
