re-flex: change default variant to avoid conflict with pre-existing port
Signed-off-by: Thomas E. Dickey <dickey@invisible-island.net>

--- a/devel/re-flex/Portfile
+++ b/devel/re-flex/Portfile
@@ -31,6 +31,8 @@ variant noconflict description {install as "re-flex" to address conflict} {
     configure.args-append --program-transform-name=s,reflex,re-flex,g
 }
 
+default_variants +noconflict
+
 compiler.cxx_standard 2011
 
 test.run            yes
