--- a/x11/homebank/Portfile
+++ b/x11/homebank/Portfile
@@ -17,16 +17,12 @@ long_description    HomeBank is the free software you have always wanted to \
                     with powerful report tools based on filtering and \
                     graphical charts.
 
-homepage            https://www.gethomebank.org/
-master_sites        ${homepage}public/sources/
+homepage            https://www.gethomebank.org
+master_sites        ${homepage}/public/sources/
 
 checksums           rmd160  c6eec6fa0d233e24aade8ae2c087ec29abb0ab00 \
                     sha256  42ce7146c875ea0ca3c93391b6a9bf4714db4621c63f4a094dcc6f8985bb54e4 \
                     size    3670067
-
-livecheck.type      regex
-livecheck.url       ${homepage}/ChangeLog
-livecheck.regex     "Made (\\d.\\d.\\d) release"
 
 depends_build       port:intltool \
                     port:pkgconfig
@@ -39,3 +35,7 @@ depends_lib         port:gettext \
 
 # https://bugs.launchpad.net/intltool/+bug/1197875
 use_autoreconf      yes
+
+livecheck.type      regex
+livecheck.url       ${homepage}/ChangeLog
+livecheck.regex     {Made ([0-9.]+) release}
