CI: enable running port test
Only running built-in tests for now, since we don't have a good
solution for ports that may run test commands that take a very long
time to complete.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -206,6 +206,46 @@ jobs:
 
             echo "✅ Successfully built" >> $GITHUB_STEP_SUMMARY
             echo "::endgroup::"
+
+            echo "::group::Testing ${subport}"
+
+            set +e
+            sudo mpbb \
+              --work-dir "$workdir" \
+              test-port \
+              --builtin-only \
+              "$subport"
+            test_exit=$?
+            set -e
+
+            if [ "$test_exit" -ne 0 ]; then
+              echo "::endgroup::"
+              echo "::error::Tests failed for ${subport}"
+
+              echo "❌ Tests failed, see the log for more details" >> $GITHUB_STEP_SUMMARY
+
+              fail=1
+              continue
+            fi
+
+            test_msgs=$(port log --phase test --level warn "$subport")
+
+            if [ -n "$test_msgs" ]; then
+              echo "$test_msgs"
+              echo "⚠️ Test warnings" >> $GITHUB_STEP_SUMMARY
+
+              printf '```\n%s\n```\n' "$test_msgs" >> $GITHUB_STEP_SUMMARY
+
+              # See https://github.com/actions/toolkit/issues/193#issuecomment-605394935
+              encoded_messages="port test ${subport}:%0A"
+              encoded_messages+="$(echo "${test_msgs}" | sed -E 's/$/%0A/g' | tr -d '\n')"
+              echo "::warning file=${path#${PWD}/ports/},line=1,col=1::${encoded_messages}"
+            else
+                 echo "✅ Successfully tested" >> $GITHUB_STEP_SUMMARY
+            fi
+
+            echo "::endgroup::"
+
           done
 
           exit "$fail"
