re-flex: remove variant, rename executable
Signed-off-by: Thomas E. Dickey <dickey@invisible-island.net>

--- a/devel/re-flex/Portfile
+++ b/devel/re-flex/Portfile
@@ -26,12 +26,9 @@ long_description    RE/flex is a regex-centric, fast lexical analyzer generator 
 
 homepage            https://www.genivia.com/doc/reflex/html/
 
-# rename to avoid conflict identical executable name
-variant noconflict description {install as "re-flex" to address conflict} {
-    configure.args-append --program-transform-name=s,reflex,re-flex,g
-}
-
-default_variants +noconflict
+# rename to avoid conflict (identical executable name) with pre-existing
+# "reflex" port, using the expected name given this port's name.
+configure.args-append --program-transform-name=s,reflex,re-flex,g
 
 compiler.cxx_standard 2011
 
