--- a/ruby/rb-parsetree/Portfile
+++ b/ruby/rb-parsetree/Portfile
@@ -1,25 +1,25 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
-PortSystem			1.0
-PortGroup			ruby 1.0
+PortSystem          1.0
+PortGroup           ruby 1.0
 
 ruby.branches       3.3 3.2 3.1
 ruby.setup          ParseTree 3.0.9 gem {} rubygems
 revision            0
-license				MIT
-maintainers			nomaintainer
-description			Extract and enumerate ruby parse trees.
-long_description	ParseTree is a C extension (using RubyInline) that \
-					extracts the parse tree for an entire class or a \
-					specific method and returns it as a s-expression (aka \
-					sexp) using ruby's arrays, strings, symbols, and \
-					integers.
+license             MIT
+maintainers         nomaintainer
+description         Extract and enumerate Ruby parse trees
+long_description    ParseTree is a C extension (using RubyInline) that \
+                    extracts the parse tree for an entire class or \
+                    a specific method and returns it as a s-expression \
+                    (aka sexp) using Ruby's arrays, strings, symbols \
+                    and integers.
 checksums           rmd160  48a4c1697fea0e9cf36efebec75c1d7ad541571a \
                     sha256  ab9abdce14b77632abac47d066a2263de6e34cb280267afec33013af7c9e4b35 \
                     size    41472
-platforms			any
+platforms           any
 supported_archs     noarch
-homepage			https://github.com/seattlerb/parsetree
+homepage            https://github.com/seattlerb/parsetree
 
 if {${name} ne ${subport}} {
     depends_run-append \
