--- a/ruby/rb-rubyinline/Portfile
+++ b/ruby/rb-rubyinline/Portfile
@@ -1,7 +1,8 @@
 PortSystem			1.0
 PortGroup			ruby 1.0
 
-ruby.setup			RubyInline 3.7.0 gem {} rubygems
+ruby.branches       3.3 3.2 3.1
+ruby.setup          RubyInline 3.14.0 gem {} rubygems
 license				MIT
 maintainers			nomaintainer
 description			Multi-language extension coding within ruby.
@@ -11,12 +12,14 @@ long_description	Ruby Inline is an analog to Perl's Inline::C. Out of the \
 					classes, you can teach how to cope with new languages \
 					(fortran, perl, whatever). The code is compiled and run \
 					on the fly when needed.
-checksums			md5 c7a70952289553d965c611a723f50be9 \
-					sha1 c6a5f03d0bb2b4b015635a62eb7245f47af79c9b \
-					rmd160 4469f91d16db2fd15f39994630fa6346912ba098
+checksums           rmd160  d4e643534e4ba31939b3ea1084d571e2ffafaf34 \
+                    sha256  839ef1393f34f5e0c1423b2378f00c17244e0580f43fdcf9b664c873bb431b90 \
+                    size    31232
 platforms			any
 supported_archs     noarch
 homepage			http://www.zenspider.com/ZSS/Products/RubyInline/
 
-depends_lib-append \
-					port:rb-hoe
+if {${name} ne ${subport}} {
+    depends_run-append \
+                    port:rb${ruby.suffix}-zentest
+}
