--- a/ruby/rb-rubyinline/Portfile
+++ b/ruby/rb-rubyinline/Portfile
@@ -1,23 +1,25 @@
-PortSystem			1.0
-PortGroup			ruby 1.0
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
+
+PortSystem          1.0
+PortGroup           ruby 1.0
 
 ruby.branches       3.3 3.2 3.1
 ruby.setup          RubyInline 3.14.0 gem {} rubygems
-license				MIT
-maintainers			nomaintainer
-description			Multi-language extension coding within ruby.
-long_description	Ruby Inline is an analog to Perl's Inline::C. Out of the \
-					box, it allows you to embed C/++ external module code in \
-					your ruby script directly. By writing simple builder \
-					classes, you can teach how to cope with new languages \
-					(fortran, perl, whatever). The code is compiled and run \
-					on the fly when needed.
+license             MIT
+maintainers         nomaintainer
+description         Multi-language extension coding within Ruby
+long_description    RubyInline is an analog to Perl's Inline::C. Out of \
+                    the box, it allows you to embed C/++ external module code \
+                    in your Ruby script directly. By writing simple builder \
+                    classes, you can teach how to cope with new languages \
+                    (Fortran, Perl, whatever). The code is compiled and run \
+                    on the fly when needed.
 checksums           rmd160  d4e643534e4ba31939b3ea1084d571e2ffafaf34 \
                     sha256  839ef1393f34f5e0c1423b2378f00c17244e0580f43fdcf9b664c873bb431b90 \
                     size    31232
-platforms			any
+platforms           any
 supported_archs     noarch
-homepage			http://www.zenspider.com/ZSS/Products/RubyInline/
+homepage            https://www.zenspider.com/projects/rubyinline.html
 
 if {${name} ne ${subport}} {
     depends_run-append \
