--- a/ruby/rb-image_science/Portfile
+++ b/ruby/rb-image_science/Portfile
@@ -1,17 +1,20 @@
 PortSystem			1.0
 PortGroup			ruby 1.0
 
-ruby.setup			image_science 1.1.3 gem {} rubygems
+ruby.branches       3.3 3.2 3.1
+ruby.setup          image_science 1.3.2 gem {} rubygems
 license				MIT
 maintainers			nomaintainer
 description			Ruby library that generates thumbnails
 long_description	{*}${description}
-checksums			md5     b03791c25b4ef5ee0323a23ca15aae09 \
-					sha1    cc6670364f63bd1ee13bb39eaf2f7176c1097c69 \
-					rmd160  b673d11645a90f67bf33cf6c5a54dbc5435d199f
+checksums           rmd160  8f3aee78d02bce6501840d5d601e0be58997e4b1 \
+                    sha256  0936b43e5b19697ecabdd514d717e21ecf81ef2b339df610b1570a3321fe22da \
+                    size    20480
 platforms           any
 supported_archs     noarch
 
-depends_run-append  port:freeimage \
-					port:rb-rubyinline \
-					port:rb-hoe
+if {${name} ne ${subport}} {
+    depends_run-append \
+                    port:freeimage \
+                    port:rb${ruby.suffix}-rubyinline
+}
