--- a/ruby/rb-image_science/Portfile
+++ b/ruby/rb-image_science/Portfile
@@ -1,12 +1,16 @@
-PortSystem			1.0
-PortGroup			ruby 1.0
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
+
+PortSystem          1.0
+PortGroup           ruby 1.0
 
 ruby.branches       3.3 3.2 3.1
 ruby.setup          image_science 1.3.2 gem {} rubygems
-license				MIT
-maintainers			nomaintainer
-description			Ruby library that generates thumbnails
-long_description	{*}${description}
+categories-append   graphics
+license             MIT
+maintainers         nomaintainer
+description         Ruby library that generates thumbnails
+long_description    {*}${description}
+homepage            https://github.com/seattlerb/image_science
 checksums           rmd160  8f3aee78d02bce6501840d5d601e0be58997e4b1 \
                     sha256  0936b43e5b19697ecabdd514d717e21ecf81ef2b339df610b1570a3321fe22da \
                     size    20480
