--- a/python/py-types-colorama/Portfile
+++ b/python/py-types-colorama/Portfile
@@ -29,9 +29,9 @@ checksums           rmd160  dff1cad99f04ec0ed0f02173ad4bd4a46b2cc68a \
 
 python.versions     38 39 310 311 312
 
-python.pep517           yes
-python.pep517_backend   hatch
-
 if {${name} ne ${subport}} {
+    depends_build-append \
+                    port:py${python.version}-setuptools \
+    
     livecheck.type  none
 }
