re-flex: change comment to notes

--- a/devel/re-flex/Portfile
+++ b/devel/re-flex/Portfile
@@ -26,8 +26,8 @@ long_description    RE/flex is a regex-centric, fast lexical analyzer generator 
 
 homepage            https://www.genivia.com/doc/reflex/html/
 
-# rename to avoid conflict (identical executable name) with pre-existing
-# "reflex" port, using the expected name given this port's name.
+notes               "The executable and manpage are renamed to avoid conflict with the pre-existing \"reflex\" port."
+
 configure.args-append --program-transform-name=s,reflex,re-flex,g
 
 compiler.cxx_standard 2011
