justpath: add poetry backend

--- a/sysutils/justpath/Portfile
+++ b/sysutils/justpath/Portfile
@@ -34,3 +34,5 @@ python.default_version  312
 depends_lib-append      port:py${python.version}-colorama \
                         port:py${python.version}-typer \
                         port:py${python.version}-types-colorama
+
+python.pep517_backend   poetry
