--- a/sysutils/justpath/Portfile
+++ b/sysutils/justpath/Portfile
@@ -33,6 +33,7 @@ python.default_version  312
 
 depends_lib-append      port:py${python.version}-colorama \
                         port:py${python.version}-typer \
-                        port:py${python.version}-types-colorama
+                        port:py${python.version}-types-colorama \
+                        port:py${python.version}-typing_extensions
 
 python.pep517_backend   poetry
